# choiros-rs

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  API_TYPE_GENERATION_REVIEW.md  APP_PARITY_ANALYSIS.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_REVIEW.md  Cargo.toml  DESKTOP_WINDOW_COMPARISON_REPORT.md  Justfile  README.md  RECONCILIATION_REPORT.md  STATE_MANAGEMENT_REVIEW.md  flake.nix  opencode.json  opencode.json.backup  progress.md  roadmap_progress.md  run-e2e-tests.sh  run-phase4-e2e.sh  run_e2e_test.sh  run_e2e_tests.py  test-report.md  test.sh  test_chat_icon.sh  test_report.html  websocket-implementation-review.md
dioxus-desktop/: .gitignore  Cargo.toml  flake.nix
dioxus-desktop/public/: terminal.js
dioxus-desktop/src/: api.rs  components.rs  desktop.rs  desktop_window.rs  interop.rs  lib.rs  main.rs  terminal.rs
dioxus-desktop/src/auth/: mod.rs  passkey.rs
hypervisor/: Cargo.toml  flake.nix
hypervisor/.sqlx/: query-0e208ed9ac2daee48c5b0bc733fe418e40c8d8c67e3c2346889df713dd46c16d.json  query-1df60d4b29f27c48aa57de337f85dba2927fe8a531b52cc3a0ae618512b46818.json  query-2c4f3ee28b021902c457c91f8e0d1274fa135fe7333fd0f009b4aa03c9683f54.json  query-2e61cd30a6cd3e0937dd096b4f94493e8bcb8c10687d0f8c0592fe38ed956fa6.json  query-3d077e06c268617b89b226a3b026bdc83a8e5f65398327ba777c334b3b71ebfd.json  query-494c9b173bc5bc8e4c2aa2d2170173671027f1067297bc49e077a9973482fa27.json  query-688d47da3fae5f1e583cb034702a3f13f9d8590eb5d547b0033a2934370340b1.json  query-82b0d8abc14f6f7bec7ef4632c14b0a480f15abf7c1a009fe770ee8f7359ece3.json  query-a76d5c397f625264080a5bc765c64f0145ce2a9e0ea3041ecbf4cba8751e8fc6.json  query-b32d3e03c31a72f66a38d11a3b7bbc135c5b027f8edddab57ebc8b2a611f856f.json  query-f46ea1851f7fc0c77a6c52010c1b76d983647727baf3e647e9d19f537df7cba2.json
hypervisor/migrations/: 0001_initial.sql  0002_runtime_registry.sql  0003_machine_classes.sql  0004_jobs.sql
hypervisor/src/: config.rs  jobs.rs  main.rs  middleware.rs  provider_gateway.rs  runtime_registry.rs  session_store.rs  state.rs
hypervisor/src/db/: mod.rs
sandbox/: Cargo.toml  Dockerfile  current_news.md  current_news_summary.md  flake.nix  research_draft.md  research_findings.md  tech_news_brief_2026-02-14.md  weather.py
sandbox-ui/: Cargo.toml  dioxus.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
sandbox-ui/public/: terminal.js  viewer-text.js
sandbox-ui/src/: App.tsx  api.rs  components.rs  desktop.rs  desktop_window.rs  interop.rs  lib.rs  main.rs  main.tsx  terminal.rs
sandbox/.sqlx/: query-0a4df445f24c45f852e3a86d459afb81d2e492e6436ff5715dc63e101d65ad5a.json  query-3775f2097ee543349400778059d363e6b419afc484bdd10cd46c0f84d2c204bb.json  query-74b2c935571502afeac4e26222f2f0a953c556890e58d919e308454bef20ff98.json  query-8c8dd1b1b061d300bfaaffcc6518a0a8a9ced6b99cac6fa54f739db2aaded2ec.json  query-c9d6b044f63b5fe5d3b0cf2214cde6c44f8033c357c245fea01694379704fffd.json  query-d521ea3a5ab9a0962cbc58350a2acb296e521d6386ec5f38567b1d82451e58b6.json  query-ed45637fce369e4cc045a3f9bc76136fb1584575e42082f52d263d90121de3b8.json  query-efc17440fdd323fcc17dba0ac93d188222a96fb161b0f27174bdae89b392b10f.json  query-f3e6834caedc883f834a7e530065c76229c692ff23fa4bcb0400f31989ac59bc.json
sandbox/config/: model-catalog.example.toml  model-catalog.toml
sandbox/migrations/: 20250209000000_document_revisions.sql  20260130000000_create_events_table.sql  20260131000000_events_scope_columns.sql
sandbox/reports/: 01KH2YA1HJVDNSGA1RYKPBNDY1.md  01KH2YAA1WX6Q9606AHS49RW10.md  01KH2YCMSX0YXWCZSY5E8G6C0A.md  01KH2YGRV05ST9PA3FZB9WTXSE.md  01KH2YH4RP0FGV3H8A2Z7HFFW1.md  01KH2YR5EQ5REBNNV47NZHHF3R.md  01KH2YYNM20HYZXZBVTEWXRVVG.md  01KH2YZ9YR1RM26VB0YYRXRK63.md  01KH2ZDA7QDYBDTW0A0NMX9M9Y.md  01KH2ZRTBTW8KPYTVPTWDGTTQ3.md  01KH30JTSQEX4QRABVNK45Q9PF.md  01KH31B2NBC0MZZVVSSVJQAPWY.md  01KH3215AC7S3HT4MA07Y5D1A3.md  01KH3246WHHH0QZ2HY3KSBF4T1.md  01KH4KMHBNQYCFB9RHEDWTPH9J.md  01KH4VTBQE9E1G20BEBKNK3VEV.md  01KH4WHMECG899PJAQP5BP477B.md  01KH4WN0PTZ15AXP895SXF0QGB.md  01KH4ZQ1SQNQX2HQE7XAX14HWZ.md  01KH51KZMS9BBEBKA8BF59NY5E.md  01KH54995HE3RDABJBM0W78Q0Y.md  01KH575VY12XQZ2NK20FH6HV6J.md  01KH579TSN5NAKES7EMN01DQMV.md  01KH57DQ6RAVV93SEP4GCQESVY.md  01KH5AESW6PR4DJRQW9KPCHWV5.md  01KH5B2NDK2H65HQF7JG6N3D0Y.md  01KH5B6S4CD28SD7D9F8KY04DG.md  01KH5D45S86MZY56P1XCVPB830.md  01KH5EQQ3W6B602P45QE91ZGMZ.md  01KH5K0KD3F9RR3Y1DE948DF9H.md  01KHAD018PHSNN7DTWW6KDPZ45.md  01KHAD4ZDK2ZMVYXWJMR9W4G2Y.md  01KHCCSJT3RAF79ZKKJ1M0GQ00.md  01KHF0S1SW407RK34YVQ7JQBP8.md  01KHF3N884QDQGWS59VT292CSZ.md  01KHF4G15M4HP1Z7RW6HRVBH5H.md  01KHF4QMHJ6XX01JKW3J2Y2TQK.md  01KHF5KVWNYP5Z37MAY1HXV5N7.md  01KHF5TNPKAX0S6V4PP6TQDJ87.md  01KHF6RR0PC2D7E2DDV99CWXV5.md  (+7 more)
sandbox/research/: whats_going_on_marvin_gaye_draft.md
sandbox/src/: actor_manager.rs  app_state.rs  lib.rs  main.rs  markdown.rs  paths.rs  runtime_env.rs  self_directed_dispatch.rs
sandbox/test_writer_9536/: test_doc2.md
sandbox/test_writer_9752/: Hi from iPhone.md  test_doc.md
sandbox/test_writer_9829/: test_doc.md
sandbox/tests/: actorharness_live_test.rs  alm_eval_test.rs  alm_harness_eval.rs  alm_port_integration_test.rs  capability_boundary_test.rs  chat_agent_tests.rs  chat_api_test.rs  chat_superbowl_live_matrix_test.rs  conductor_api_test.rs  conductor_durability_test.rs  dag_eval.rs  dag_execution_test.rs  desktop_api_test.rs  desktop_supervision_test.rs  desktop_ws_test.rs  e2e_conductor_scenarios.rs  fanout_parallelism_eval.rs  files_api_test.rs  harness_live_test.rs  harness_recovery_test.rs  live_eval_opt_in_contract_test.rs  logs_api_test.rs  logs_ws_test.rs  markdown_test.rs  memory_actor_test.rs  model_provider_live_test.rs  persistence_test.rs  phase0_gate_test.rs  rlm_eval_test.rs  rlm_harness_eval.rs  run_lifecycle_e2e_test.rs  run_writer_contract_test.rs  supervision_test.rs  terminal_factory_test.rs  terminal_ws_smoketest.rs  tools_integration_test.rs  trace_viewer_test.rs  viewer_api_test.rs  websocket_chat_test.rs  worker_signal_contract_test.rs  (+1 more)
shared-types/: Cargo.toml
shared-types/src/: lib.rs
(+1025 files in other folders)
