[workspace]
members = [
    "shared-types",
    "hypervisor", 
    "sandbox",
    "sandbox-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["ChoirOS Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# Web framework (Dioxus)
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-web = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json", "migrate", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# BAML / LLM
baml = "0.218"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Utilities
once_cell = "1.20"
regex = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
