[package]
name = "sandbox-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["ChoirOS Team"]
license = "MIT"
description = "Dioxus UI for ChoirOS sandbox"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sandbox-ui"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
shared-types = { path = "../shared-types" }

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CloseEvent",
    "Document",
    "Element",
    "ErrorEvent",
    "Event",
    "HtmlScriptElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Storage",
    "WebSocket",
    "Window",
] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
dioxus-logger = "0.7.3"
wasm-logger = "0.2.0"
log = "0.4.29"
uuid = { version = "1.0", features = ["js"] }
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
