[package]
name = "sandbox-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Dioxus UI for ChoirOS sandbox"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sandbox-ui"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true }
dioxus-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
shared-types = { path = "../shared-types" }

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
gloo-net = "0.6"
dioxus-logger = "0.7.3"
wasm-logger = "0.2.0"
log = "0.4.29"
uuid = { version = "1.0", features = ["js"] }
futures-util = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
