[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Per-user ChoirOS instance - actors, API, and embedded UI"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-ws = { workspace = true }
actix-cors = "0.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libsql = "0.9"
uuid = { workspace = true }
ulid = { workspace = true }
baml = { workspace = true }
thiserror = { workspace = true }
shared-types = { path = "../shared-types" }
dashmap = "5.5"
walkdir = "2.5"
actix-web-actors = "4.3"

pulldown-cmark = "0.12"
regex = { workspace = true }
futures-util = "0.3.31"

[dev-dependencies]
actix-rt = { workspace = true }
tempfile = "3.8"
actix-web = { workspace = true }
actix-http = "3.9"
actix-service = "2"
futures = { workspace = true }
actix-test = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
