[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Per-user ChoirOS instance - actors, API, and embedded UI"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
hyper = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libsql = "0.9"
uuid = { workspace = true }
ulid = { workspace = true }
baml = { workspace = true }
thiserror = { workspace = true }
shared-types = { path = "../shared-types" }
dashmap = "5.5"
walkdir = "2.5"

pulldown-cmark = "0.12"
regex = { workspace = true }
futures-util = "0.3.31"
ractor = { version = "0.15", features = ["async-trait"] }
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
portable-pty = "0.9"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
base64 = "0.22"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.8"
futures = { workspace = true }
tokio-tungstenite = "0.23"
reqwest = { version = "0.12", features = ["blocking"] }
