[package]
name = "shared-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types between frontend and backend"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
ts-rs = { version = "12.0", features = ["chrono-impl"] }

[dev-dependencies]
# Tests are in lib.rs
